Fix --add-modules syntax